# bcg-case-study-analysis

./: .gitignore  README.md  analysis.ipynb  pyproject.toml
bcg_case_study/jobs/: case_study_job.py
config/: config.yaml
src/jobs/: case_study_job.py
src/main/: base.py  data_loading.py  data_processing.py
src/utils/: config_parser.py
